<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerifyAccount"
    android:background="@color/Lightblue">

    <TextView
        android:id="@+id/TVvirefy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp"
        android:text="@string/verifyaccount"
        android:textColor="@color/Background"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/descverify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TVvirefy"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/descverify"
        android:textColor="@color/Background" />

    <EditText
        android:id="@+id/enterverify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descverify"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:hint="@string/enterverify"
        android:paddingBottom="20dp"
        android:textColor="@color/Background"
        android:textColorHint="@color/Background"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnverify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enterverify"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/btnbiru"
        android:text="@string/send"
        android:textColor="@color/Background" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnverify"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/doesntgetcode"
        android:textColor="@color/Background"
        android:textSize="13sp" />

</RelativeLayout>