<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".Register">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusableInTouchMode="true">

        <android.support.v7.widget.CardView
            android:id="@+id/regis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="20dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ic_header"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btnkembali"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/ic_header_back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="35dp"
                    android:text="@string/register"
                    android:textColor="@color/Background"
                    android:textSize="18sp" />
            </LinearLayout>

    </android.support.v7.widget.CardView>

        <EditText
            android:id="@+id/userregis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/regis"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/fontdesc"
            android:hint="@string/Username"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:paddingBottom="20dp"
            android:textColorHint="@color/fontdesc"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/emailregis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/userregis"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/fontdesc"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingBottom="20dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/fontdesc"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/regisphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailregis"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/fontdesc"
            android:hint="@string/phonenmr"
            android:inputType="phone"
            android:paddingBottom="20dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/fontdesc"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/malerbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/regisphone"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:paddingLeft="20dp"
            android:text="@string/male"
            android:textColor="@color/fontdesc" />

        <RadioButton
            android:id="@+id/femalerbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/regisphone"
            android:layout_alignParentRight="true"
            android:layout_marginRight="90dp"
            android:layout_marginTop="5dp"
            android:paddingLeft="20dp"
            android:text="@string/fml"
            android:textColor="@color/fontdesc" />

        <EditText
            android:id="@+id/blood"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/malerbtn"
            android:layout_marginLeft="30dp"
            android:drawableRight="@drawable/ic_register_dropdown"
            android:hint="@string/bloodtype"
            android:layout_marginTop="5dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/reshus"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/malerbtn"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:drawableRight="@drawable/ic_register_dropdown"
            android:text="Reshus"
            android:layout_marginTop="5dp"
            android:textColor="@color/fontdesc"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/blood"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/fontdesc"
            android:hint="@string/pw"
            android:inputType="textPassword"
            android:paddingBottom="20dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/fontdesc"
            android:textSize="14sp" />
        <EditText
            android:id="@+id/retypepass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pass"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/fontdesc"
            android:hint="Retype Password"
            android:inputType="textPassword"
            android:paddingBottom="20dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/fontdesc"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/personal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/retypepass"
            android:layout_marginLeft="50dp"
            android:paddingLeft="15dp"
            android:text="@string/personal"
            android:layout_marginTop="5dp"
            android:textColor="@color/fontdesc" />

        <RadioButton
            android:id="@+id/organization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/retypepass"
            android:layout_alignParentRight="true"
            android:layout_marginRight="50dp"
            android:paddingLeft="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/organization"
            android:textColor="@color/fontdesc" />

        <EditText
            android:id="@+id/job"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/organization"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:drawableRight="@drawable/ic_register_dropdown"
            android:hint="@string/job"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/homeadd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/job"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingBottom="20dp"
            android:textColor="@android:color/black"
            android:hint="@string/homeaddress"
            android:inputType="text"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/homeadd"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/fontdesc"
            android:drawableRight="@drawable/ic_blood_needed_location"
            android:hint="@string/defaultlc"
            android:inputType="text"
            android:textColor="@color/fontdesc"
            android:textColorHint="@color/fontdesc"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/checkagree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/location"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="15dp"
            android:text="Agree with Terms and Conditions "
            android:textColor="@color/fontdesc" />

        <Button
            android:id="@+id/btnregis"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/checkagree"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/btnputih"
            android:text="REGISTER"
            android:layout_marginBottom="20dp"
            android:textColor="@color/Lightblue" />


    </RelativeLayout>

</ScrollView>