<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Lightblue"
    tools:context=".MainActivity"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusableInTouchMode="true">

        <ImageView
            android:id="@+id/welo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="90dp"
            android:src="@drawable/ic_welcome_logo"
            android:tint="@color/Background" />

        <EditText
            android:id="@+id/edituser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welo"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="13dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/Background"
            android:hint="@string/Username"
            android:inputType="text"
            android:paddingBottom="20dp"
            android:textColor="@color/Background"
            android:textColorHint="@color/Background"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edituser"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/Background"
            android:hint="@string/pw"
            android:inputType="textPassword"
            android:paddingBottom="20dp"
            android:textColor="@color/Background"
            android:textSize="14sp"
            android:textColorHint="@color/Background" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/pass"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/btnbiru"
            android:text="@string/login"
            android:textColor="@color/Background"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/or"
            android:textColor="@color/Background" />

        <Button
            android:id="@+id/btnfb"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/textor"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/btnbiru"
            android:drawableLeft="@drawable/ic_welcome_fb_login"
            android:paddingLeft="65dp"
            android:gravity="center"
            android:paddingRight="55dp"
            android:text="@string/connectfb"
            android:textColor="@color/Background"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/txtregis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnfb"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textSize="13sp"
            android:text="@string/belum_punya_akun"
            android:textColor="@color/Background" />

    </RelativeLayout>

</ScrollView>